Add dummy class to test scale interfacing
